SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/75
  The options "Allow to run all SQLs in editor" and "Allow to run a SQL in all open Sessions"
  are now switched off by default. See menu File --> Global Preferences tab SQL.
  Note: This change applies only to SQuirreL user directories that did not already
  contain these options in their prefs.xml file. The path to SQuirreL's user directory is displayed
  in SQuirrel's window title.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/79
  MS Excel file export: The MS Excel section of the file export dialog offers two new options:
  1. Option to define the name of the Excel sheet tab that is created inside the Excel file.
  2. Option to replace Excel sheet tabs in existing Excel files.
  Note that those two (as several other) options will apply to automated exports, too.
  To learn about automated exports see the link at the bottom of the file export dialog.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/76
  Cell data popup and cell detail display now offer right mouse menus to
  Base64/Base32/Hex-decode selected text. The decoded text is written to the message panel.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/75
  New function to execute a SQL in multiple Sessions:
  The new Session toolbar button "Run SQL in all open Sessions" (ctrl+alt+shift+ENTER)
  executes the current SQL in all open Sessions.
  The feature can be switched off at menu File --> Global Preferences --> tab SQL
  --> checkbox "Allow to run a SQL in all open Sessions"

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/74
  Multiple selected Aliases can be selected and connected to.
