@@ -48,3 +48,10 @@ BookmarkEditController.duplicate.bookmark.name=A bookmark named "{0}" already ex
 
 SQLBookmarkPreferencesPanel.show.as.tree=Show user bookmarks in tree using
 SQLBookmarkPreferencesPanel.show.as.tree.as.path.separator=as path separator char
+
+RunBookmarkTagHandler.noBookmarkBeginMarker=@runbookmark tag found without bookmark to run. Bookmark name must be given after the tag in single quotes.
+RunBookmarkTagHandler.noBookmarkEndMarker=@runbookmark tag found without bookmark to run. Bookmark name must be given after the tag in single quotes.
+RunBookmarkTagHandler.bookmarkDoesNotExist=Bookmark named {0} does not exits.
+
+sqlbookmark.note.runbookmark=Note: To directly execute a bookmark's statement use @runbookmark <bookmarkName>
+sqlbookmark.note.runbookmark.tooltipp=Note: To directly execute a bookmark's statement from within the SQL editor use @runbookmark <bookmarkName>
